# claims-review

./: .gitignore  README.md  package-lock.json  pyproject.toml  ruff.toml
.claude/: settings.local.json
.specs-fire/: state.yaml
.specs-fire/intents/claims-review-platform/: brief.md
.specs-fire/intents/claims-review-platform/work-items/: 01-project-scaffold.md  02-aws-foundation-infra.md  03-aurora-schema-migrations.md  04-synthetic-claims-fixtures.md  05-pipeline-orchestration.md  06-bronze-textract-parse.md  07-silver-classify-extract.md  08-gold-verdict-routing.md  09-reviewer-backend-api.md  10-reviewer-frontend-app.md  11-assistant-agent-service.md  12-mlflow-tracing-setup.md  13-eval-curation-scoring.md  14-gepa-prompt-optimization.md  15-demo-and-teardown.md  aws-foundation-infra-design.md
.specs-fire/runs/run-claims-review-001/: plan.md  review-report.md  run.md  test-report.md  walkthrough.md
.specs-fire/runs/run-claims-review-002/: plan.md  review-report.md  run.md  test-report.md  walkthrough.md
.specs-fire/runs/run-claims-review-003/: plan.md  review-report.md  run.md  test-report.md  walkthrough.md
.specs-fire/runs/run-claims-review-004/: plan.md  review-report.md  run.md  test-report.md  walkthrough.md
.specs-fire/runs/run-claims-review-005/: plan.md  review-report.md  run.md  test-report.md  walkthrough.md
.specs-fire/runs/run-claims-review-006/: plan.md  review-report.md  run.md  test-report.md  walkthrough.md
.specs-fire/runs/run-claims-review-007/: plan.md  review-report.md  run.md  test-report.md  walkthrough.md
.specs-fire/standards/: coding-standards.md  constitution.md  system-architecture.md  tech-stack.md  testing-standards.md
.specsmd/: manifest.yaml
agent/: README.md  pyproject.toml
agent/src/agent/: __init__.py
backend/: README.md  pyproject.toml
backend/src/backend/: __init__.py
common/: README.md  alembic.ini  pyproject.toml
common/migrations/: env.py
common/migrations/versions/: c1fc63bb75f0_bronze_parses.py  e3cd55308ea0_initial_schema.py
common/src/common/: __init__.py  db.py  models.py
common/tests/: test_schema.py
eval/: README.md  pyproject.toml
eval/src/claims_eval/: __init__.py
infra/: README.md  app.py  cdk.context.json  cdk.json  pyproject.toml
infra/src/infra/: foundation_stack.py  pipeline_stack.py  test_connectivity_handler.py
pipeline/: README.md  pyproject.toml
pipeline/src/pipeline/: __init__.py
pipeline/src/pipeline/bronze/: parse_handler.py
pipeline/src/pipeline/gold/: confidence_route_handler.py  verdict_routing.py
pipeline/src/pipeline/silver/: classify_extract_handler.py  confidence_scoring.py  models.py
pipeline/tests/fixtures/bedrock_responses/: classify_clean.json  classify_missing_fields.json  extract_clean.json  extract_missing_fields.json
pipeline/tests/fixtures/sample_claims/: README.md  generate_fixtures.py
pipeline/tests/fixtures/textract_responses/: blurry_low_confidence.json  clean_high_confidence.json
pipeline/tests/unit/: test_bronze_parse_handler.py  test_confidence_scoring.py  test_gold_confidence_route_handler.py  test_silver_classify_extract_handler.py  test_verdict_routing.py
