[project]
name = "agent"
version = "0.1.0"
description = "LangGraph + Bedrock stateful assistant agent service"
requires-python = ">=3.12"
dependencies = [
    "common",
    "langgraph>=0.2",
    "langchain-aws>=0.2",
    "boto3>=1.35",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    "mlflow>=2.16",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[tool.uv.sources]
common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent"]
