[project]
name = "claims-eval"
version = "0.1.0"
description = "Eval dataset curation, weighted scoring, and GEPA prompt optimization"
requires-python = ">=3.12"
dependencies = [
    "common",
    "mlflow>=2.16",
    "boto3>=1.35",
]

[tool.uv.sources]
common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claims_eval"]
