[project]
name = "infra"
version = "0.1.0"
description = "AWS CDK app defining all infrastructure for the claims-review platform"
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib>=2.150",
    "constructs>=10.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/infra"]
