[project]
name = "pipeline"
version = "0.1.0"
description = "Bronze/Silver/Gold claim document processing pipeline (Textract + Bedrock)"
requires-python = ">=3.12"
dependencies = [
    "common",
    "boto3>=1.35",
    "pydantic>=2.9",
]

[tool.uv.sources]
common = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeline"]
